# ml-playground

./: README.md  pyproject.toml
examples/: model.py  trainer.py
examples/bert/: __main__.py  bert_example.py  bert_model.py  bookcorpus.py  dataset3  wikipedia.py
examples/bert/tokenizer/: added_tokens.json  merges.txt  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
examples/language_model/: __main__.py  checkpoint.pt  lit.py  lm_example.py  tiny_stories.py  transformer_lm.py
examples/language_model/tokenizer/: added_tokens.json  merges.txt  special_tokens_map.json  tokenizer.json  vocab.json
examples/translator/: __main__.py  checkpoint.pt  lit.py  text_pairs.py  translator.py  translator_example.py
examples/translator/tokenizer/: merges.txt  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
ml_playground/: bert.py  dense.py  dropout.py  gcn.py  rnn.py  transformer.py  utils.py
