[tool.poetry]
name = "ML Playground"
version = "0.1.0"
description = ""
authors = ["Antoine Allioux <antoine.allioux@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ml_playground" },
    { include = "examples" },
]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
datasets = "^2.18.0"
transformers = "^4.39.3"
torchinfo = "^1.8.0"
lit-nlp = "^1.1.1"
einops = "^0.8.0"
typer = "^0.12.3"
termcolor = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
